--- a/layouts/_default/community.html
+++ b/layouts/_default/community.html
@@ -135,9 +135,12 @@
                   type="text"
                   class="form-control"
                   placeholder="Search templates here"
+                  id="searchInput"
                 />
-                <button class="btn btn-primary">Search</button>
               </div>
+              <ul id="searchResult">
+                <!-- the search result will appear here -->
+              </ul>
             </div>
           </div>
         </div>
