--- a/layouts/partials/script.html
+++ b/layouts/partials/script.html
@@ -13,3 +13,4 @@
 <!-- Template Main JS File -->
 <script src="/assets/js/main.js"></script>
 <script src="/assets/js/search.js"></script>
+<script src="/assets/js/search-2.js"></script>
