--- a/layouts/_default/blog.html
+++ b/layouts/_default/blog.html
@@ -79,5 +79,6 @@
     <!-- End Footer -->
 
     {{ partial "script.html" . }}
+    <script src="/assets/js/search.js"></script>
   </body>
 </html>
