--- a/layouts/_default/community.html
+++ b/layouts/_default/community.html
@@ -135,10 +135,10 @@
                   type="text"
                   class="form-control"
                   placeholder="Search templates here"
-                  id="searchInputs"
+                  id="searchInput"
                 />
               </div>
-              <ul id="searchResults">
+              <ul id="searchResult">
                 <!-- the search result will appear here -->
               </ul>
             </div>
