--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -36,4 +36,10 @@
 
   <!-- Template Main CSS File -->
   <link href="/assets/css/style.css" rel="stylesheet" />
+
+  <!-- jquiry -->
+  <script src="assets/jquery/jquery-1.12.4.js"></script>
+
+  <!-- jquary ui -->
+  <script src="/assets/jquery/jquery-ui.js"></script>
 </head>
