--- a/layouts/_default/community-list.html
+++ b/layouts/_default/community-list.html
@@ -128,15 +128,15 @@
           <div
             class="row height d-flex justify-content-center align-items-center"
           >
-            <div class="col-md-9 text-center">
-              <div class="form">
+            <div class="col-md-8" data-aos="fade-up" data-aos-delay="100">
+              <div class="search">
+                <i class="bi bi-search"></i>
                 <input
                   type="text"
-                  class="form-control form-input"
-                  placeholder="Search any keyword here..."
+                  class="form-control"
+                  placeholder="Search templates here"
                   id="search"
                 />
-                <span class="left-pan"><i class="fa fa-search"></i></span>
               </div>
               {{ $currentNode := . }} {{ $currentNode.Scratch.Set "pages"
               .Site.Pages }} {{ $pages := ($currentNode.Scratch.Get "pages") }}
@@ -144,19 +144,19 @@
                 $(function() {
                 var projects = [
                 {{ range (where .Site.Pages "Section" "community") }}
-                  {
-                    value: "{{ .Title }}",
-                    url:"{{ .Permalink }}"
-                  },
-                  {{ end }}
+                	{
+                		value: "{{ .Title }}",
+                		url: "{{ .Permalink }}"
+                	},
+                	{{ end }}
                 ];
                 $( "#search" ).autocomplete({
-                  source: projects
+                	source: projects
                 })
                 .data( "ui-autocomplete" )._renderItem = function( ul, item ) {
-                  return $( "<li>" )
-                  .append( "<a href=" + item.url + " + \" &quot;\" +  >" + item.value + "</a>"  )
-                  .appendTo( ul );
+                	return $( "<li>" )
+                	.append( "<a href=" + item.url + " + \" &quot;\" +  >" + item.value + "</a>"  )
+                	.appendTo( ul );
                 };
                 });
               </script>
