--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -38,7 +38,7 @@
   <link href="/assets/css/style.css" rel="stylesheet" />
 
   <!-- jquiry -->
-  <script src="assets/jquery/jquery-1.12.4.js"></script>
+  <script src="/assets/jquery/jquery-1.12.4.js"></script>
 
   <!-- jquary ui -->
   <script src="/assets/jquery/jquery-ui.js"></script>
