--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -2505,3 +2505,110 @@ Application -Form
   right: 5px;
   z-index: 999;
 }
+
+.form {
+  position: relative;
+}
+
+.form span {
+  position: absolute;
+  right: 17px;
+  top: 13px;
+  padding: 2px;
+  border-left: 1px solid #d1d5db;
+}
+
+.left-pan {
+  padding-left: 7px;
+}
+
+.left-pan i {
+  padding-left: 10px;
+}
+
+.form-input {
+  height: 55px;
+  text-indent: 33px;
+  border-radius: 10px;
+}
+
+.form-input:focus {
+  box-shadow: none;
+  border: none;
+}
+
+#project-icon {
+  float: left;
+  height: 32px;
+  width: 32px;
+}
+
+#project-description {
+  margin: 0;
+  padding: 0;
+}
+
+.ui-helper-hidden-accessible {
+  display: none;
+}
+
+.ui-menu {
+  list-style: none;
+  background: #fff;
+  padding: 5px 20px 20px;
+  right: 0 !important;
+  max-height: 200px;
+  overflow: hidden;
+  border-radius: 0 0 25px 25px;
+  z-index: 9999;
+  box-shadow: 0px 13px 20px 0px rgba(0, 0, 0, 0.07);
+}
+
+@media (max-width: 575px) {
+  .ui-menu {
+    width: calc(100% - 30px) !important;
+  }
+}
+
+@media (min-width: 576px) {
+  .ui-menu {
+    max-width: 510px !important;
+  }
+}
+
+@media (min-width: 768px) {
+  .ui-menu {
+    max-width: 690px !important;
+  }
+}
+
+@media (min-width: 992px) {
+  .ui-menu {
+    max-width: 610px !important;
+  }
+}
+
+@media (min-width: 1200px) {
+  .ui-menu {
+    max-width: 730px !important;
+  }
+}
+
+.ui-menu-item a {
+  color: #12397d;
+  padding: 8px 0;
+  font-size: 15px;
+  text-decoration: none;
+}
+
+.ui-menu-item:not(:last-child) {
+  border-bottom: 1px solid #e8e8e8;
+}
+
+.ui-menu-item * {
+  display: none;
+}
+
+.ui-menu-item .ui-corner-all {
+  display: block;
+}
